--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,23 @@
+# Server Configuration
 PORT=5000
-MONGODB_URI=your_mongodb_uri
-JWT_SECRET=your_jwt_secret
 
-CLOUDINARY_CLOUD_NAME=Your_Cloudinary_CloudName
-CLOUDINARY_API_KEY=Your_Cloudinary_ApiKey
-CLOUDINARY_API_SECRET=Your_Cloudinary_ApiSecret
+# Database Configuration
+# For local MongoDB: mongodb://localhost:27017
+# For MongoDB Atlas: mongodb+srv://username:password@cluster.mongodb.net
+MONGODB_URL=mongodb://localhost:27017
+
+# JWT Configuration
+# Generate a strong secret key for JWT tokens
+# You can use: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+JWT_SECRET=your_super_secret_jwt_key_here_make_it_long_and_secure
+
+# Cloudinary Configuration (for image uploads)
+# Sign up at https://cloudinary.com to get these credentials
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
 
 # Admin Credentials
-ADMIN_EMAIL=admin@example.com
+# These are hardcoded admin credentials for the system
+ADMIN_EMAIL=admin@attendance.com
 ADMIN_PASSWORD=admin123
