--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,6 @@
-VITE_BACKEND_URL=http://localhost:4000
+# Backend API Configuration
+# For local development
+VITE_BACKEND_URL=http://localhost:5000
+
+# For production, replace with your deployed backend URL
+# VITE_BACKEND_URL=https://your-backend-domain.com
